TFP-5746: Fikser på restkall for /håndter og /beregn (#24)
* TFP-5746: Fikser på restkall for /håndter og /beregn